[package]
name = "rust-imu-gesture-engine"
version = "0.1.0"
edition = "2021"

[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"

[dependencies]
defmt = "0.3"
rp2040-hal = { version = "0.11.0", features = ["rt", "critical-section-impl"]}
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[[bin]]
name = "rust-imu-gesture-engine"
path = "src/main.rs"
